# MergenVisionPhase2V2

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  MERGENVISION_BIG_PICTURE_RECOVERY_REPORT.md  Makefile  PLAN.md  ProjectGoalandContext.md  README.md  agents.md  architectureplan.md  docker-compose.gpu.yml  docker-compose.test.yml  docker-compose.yml  ds_inspect.txt  mux_props.txt  newmission.md  notes.md  prompt.txt  prompt10.txt  prompt12.txt  prompt13.txt  prompt14.txt  prompt15.txt  prompt2.txt  prompt3.txt  prompt4.txt  prompt5.txt  prompt6.txt  prompt7.txt  prompt9.txt  promt15.txt  whatwentwrong.md
backend/: .dockerignore  .env.example  .env.test  Dockerfile  Dockerfile.gpu  Dockerfile.worker.gpu  README.md  alembic.ini  entrypoint.gpu.sh  pyproject.toml
backend/app/api/: main.py  schemas.py
backend/app/api/controllers/: __init__.py  bulk_enrollment_controller.py  face_controller.py  person_controller.py
backend/app/api/routes/: common.py  dependencies.py  faces.py  people.py  processes.py  videos.py
backend/app/application/ports/: face_pipeline.py  id_generator.py  image_recognition.py  object_store.py  repositories.py  track_crop_provider.py  unit_of_work.py  vector_store.py  video_job_queue.py  video_observations.py
backend/app/application/services/: bulk_enrollment_service.py  identity_storage_lifecycle_service.py  image_recognition_service.py  image_validation_service.py  person_management_service.py  video_identity_resolution_service.py  video_overlay_service.py  video_probe_service.py  video_processing_service.py  video_reconciliation_service.py  video_result_service.py  video_track_persistence_service.py  video_tracking_service.py  video_upload_service.py
backend/app/domain/: __init__.py  errors.py  value_objects.py
backend/app/domain/entities/: __init__.py  face_identity.py  face_sample.py  outbox_event.py  person.py  process_event.py  process_record.py  recognition_result.py  video_asset.py  video_job.py  video_timeline_chunk.py  video_track.py  video_tracking.py
backend/app/infrastructure/: config.py  model_profile.py  uuid7.py
backend/app/infrastructure/health/: readiness.py
backend/app/infrastructure/runtime/: face_pipeline_adapter.py  native_image_recognition_adapter.py  native_representative_crop_provider.py  track_crop_provider.py
backend/app/infrastructure/serialization/: __init__.py  native_bundle_reader.py  video_observation_reader.py  video_observation_v1_pb2.py  video_track_template_reader.py  video_track_template_v1_pb2.py
backend/app/infrastructure/storage/: minio_adapter.py
backend/app/infrastructure/vectors/: qdrant_adapter.py
backend/app/worker/: __init__.py  bootstrap.py  video_worker_main.py
backend/config/model_profiles/: retinaface_r50_glintr100_v1.example.json  retinaface_r50_glintr100_v1.schema.json  retinaface_r50_glintr100_v1_deepstream9.json
backend/contracts/: video_observation_v1.proto  video_track_template_v1.proto
backend/native/image_runtime/: CMakeLists.txt  pyproject.toml
backend/native/image_runtime/src/: bindings.cpp  glintr100_engine.cpp  glintr100_engine.h  jpeg_decoder.cpp  jpeg_decoder.h  model_profile.cpp  model_profile.h  pipeline.cpp  pipeline.h  retinaface_engine.cpp  retinaface_engine.h  retinaface_postproc.cpp  retinaface_postproc.h  util.h  webp_encoder.cpp  webp_encoder.h
backend/native/video_worker/: CMakeLists.txt
backend/native/video_worker/proto/: video_observation_v1.pb.cc  video_observation_v1.pb.h  video_track_template_v1.pb.cc  video_track_template_v1.pb.h
backend/native/video_worker/src/: batch_assembler.cpp  retained_buffer_handle.cpp  video_face_pipeline.cpp
backend/native/video_worker/tests/: decode_smoke.cpp  real_batching_smoke.cpp  sequence_contract.cpp
backend/scripts/: audit_identity_storage.py  benchmark_lfw_enrollment_api.py  build_engines.py  inspect_video_runtime.py  restart_persistence_probe.py
backend/tests/: conftest.py
backend/tests/fixtures/: embedding_fixtures.py
backend/tests/integration/: conftest.py
backend/tests/integration/lifecycle/: conftest.py  test_candidate_validation.py  test_concurrent_uow_isolation.py  test_delete_detail_history.py  test_failure_paths.py  test_identity_storage_lifecycle.py  test_inactive_rejection.py  test_multiple_samples.py  test_optimistic_locking.py  test_restart_persistence.py
backend/tests/integration/persistence/: test_migrations.py  test_phase2_migrations.py  test_repositories.py
backend/tests/integration/services/: test_face_api_update.py  test_person_assign_and_redirect.py  test_person_management.py
backend/tests/integration/storage/: conftest.py  test_minio_adapter.py
backend/tests/native/: test_image_runtime_safety.py  test_image_runtime_surface.py
backend/tests/support/: __init__.py  resource_guard.py
backend/tests/unit/: test_domain_dependency_boundary.py
backend/tests/unit/api/: test_health.py  (+4 more)
phase1/gpu_bulk_enrollment/: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile.gpu  Makefile  README.md  docker-compose.gpu.yml  download_lfw.py  pyproject.toml
phase1/gpu_bulk_enrollment/config/: benchmark.schema.json  enrollment.schema.json  model_profile.json  model_profile.schema.json
phase1/gpu_bulk_enrollment/docs/: GPU-BULK-ENROLLMENT-VIDEO-CONTINUITY-REVIEW-PACKAGE.md  REFERENCE_SOURCE_MAP.md  TARGET_CONTRACT.md
phase1/gpu_bulk_enrollment/scripts/: check_gpu_jpeg_capability.py  check_phase2_untouched.py  check_phase2_untouched.sh  repro_teardown.py
phase1/gpu_bulk_enrollment/tests/: conftest.py
research/video_reference_lab/: .gitignore  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
research/video_reference_lab/annotator/: index.html  package-lock.json  package.json  vite.config.ts
research/video_reference_lab/configs/: friends_baseline.yaml  friends_baseline_cpu.yaml  friends_baseline_cuda.yaml  friends_ground_truth.template.yaml  friends_preview_100.yaml
research/video_reference_lab/notebooks/: friends_reference_lab.ipynb
research/video_reference_lab/tests/: __init__.py  conftest.py
research/video_reference_lab/viewer/: index.html  viewer.css  viewer.js
(+339 files in other folders)
