[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergenvision-backend"
version = "0.1.0"
description = "MergenVision backend — Phase 1 Sprint 01 Minimal Identity Storage Foundation"
requires-python = ">=3.12,<3.13"
license = { text = "Proprietary" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "sqlalchemy[asyncio]>=2.0.0,<2.1.0",
    "alembic>=1.13.0,<1.14.0",
    "asyncpg>=0.29.0,<0.30.0",
    "qdrant-client[async]>=1.18.0,<1.19.0",
    "minio>=7.2.0,<7.3.0",
    "pydantic>=2.7.0,<2.8.0",
    "pydantic-settings>=2.3.0,<2.4.0",
    "uuid7>=0.1.0,<0.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0,<8.3.0",
    "pytest-asyncio>=0.23.0,<0.24.0",
    "httpx>=0.27.0,<0.28.0",
    "ruff>=0.5.0,<0.6.0",
    "mypy>=1.10.0,<1.11.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/integration/conftest.py" = ["E402"]
"tests/integration/lifecycle/conftest.py" = ["E402"]
"tests/integration/vectors/conftest.py" = ["E402"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true
