[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mergenvision-video-lab"
version = "0.1.0"
description = "MergenVision Sprint 002 — Offline Video Reference Correctness Laboratory"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.13,<2",
    "av>=14,<17",
    "opencv-python-headless>=4.10,<6",
    "scikit-image>=0.24,<1",
    "onnx>=1.16,<2",
    "insightface==0.7.3",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "PyYAML>=6,<7",
    "typer>=0.12,<1",
    "orjson>=3.10,<4",
    "pandas>=2.2,<3",
    "matplotlib>=3.8,<4",
    "Pillow>=10,<13",
    "psutil>=5.9,<8",
    "rich>=13,<15",
]

[project.optional-dependencies]
cpu = [
    "onnxruntime>=1.20,<2",
]
cuda = [
    "onnxruntime-gpu>=1.20,<2",
]
dev = [
    "pytest>=8,<9",
    "pytest-cov>=5,<7",
    "pytest-timeout>=2,<3",
    "ruff",
    "mypy",
    "types-PyYAML",
    "nbformat",
    "nbclient",
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
]

[project.scripts]
mv-video-lab = "mergenvision_video_lab.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/mergenvision_video_lab"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "--timeout=300"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["tests.*", "tests.fixtures.*", "tests.unit.*"]
ignore_errors = true

[[tool.mypy.overrides]]
module = ["av.*", "cv2.*", "onnxruntime.*", "insightface.*"]
follow_imports = "skip"
